# flightboard-api

./: Dockerfile  README.md  aircraft.json  docker-compose.yaml  pyproject.toml
src/: .env.template  api.py  flightboard.py  main.py
