[project]
name = "flightboard-api"
version = "1.0.0"
description = "API for connecting to dump1090 and providing an augmented dataset to current aircraft"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
